objects/Partner_Application__c.object
<CustomObject>
    <fields>
        <fullName>Owner_2_DOB__c</fullName>
        <description>Case 385729</description>
        <label>Owner 2 DOB</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_2__c</fullName>
        <description>Case 385729</description>
        <label>Owner 2</label>
        <length>99</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_2_of_Ownership__c</fullName>
        <description>Case 385729</description>
        <label>Owner 2 % of Ownership</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Owner_3_DOB__c</fullName>
        <description>Case 385729</description>
        <label>Owner 3 DOB</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_3__c</fullName>
        <description>Case 385729</description>
        <label>Owner 3</label>
        <length>99</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_3_of_Ownership__c</fullName>
        <description>Case 385729</description>
        <label>Owner 3 % of Ownership</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Owner_4__c</fullName>
        <description>Case 385729</description>
        <label>Owner 4</label>
        <length>99</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <inlineHelpText>Owner of the candidate organization&apos;s name</inlineHelpText>
        <label>Owner 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PA_Approval_Date__c</fullName>
        <label>PA Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PV_Credit_Limit_1__c</fullName>
        <description>PV Credit Limit #1</description>
        <inlineHelpText>PV Credit Limit #1</inlineHelpText>
        <label>PV Credit Limit #1</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PV_Credit_Limit_2__c</fullName>
        <description>PV Credit Limit #2</description>
        <inlineHelpText>PV Credit Limit #2</inlineHelpText>
        <label>PV Credit Limit #2</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PV_Credit_Limit_3__c</fullName>
        <description>PV Credit Limit #3</description>
        <inlineHelpText>PV Credit Limit #3</inlineHelpText>
        <label>PV Credit Limit #3</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PV_Distributor_1__c</fullName>
        <label>PV Distributor #1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PV_Distributor_2__c</fullName>
        <label>PV Distributor #2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PV_Distributor_3__c</fullName>
        <label>PV Distributor #3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PV_Distributors__c</fullName>
        <label>PV Distributors</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PV_Experience_years__c</fullName>
        <label>Experience in PV (years)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PV_Product_1__c</fullName>
        <label>PV Product #1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PV_Product_2__c</fullName>
        <label>PV Product #2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PV_Product_3__c</fullName>
        <label>PV Product #3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PV_Watts_Sold_2_years_ago__c</fullName>
        <label>PV Watts Sold (2 years ago)</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PV_Watts_Sold_3_years_ago__c</fullName>
        <label>PV Watts Sold (3 years ago)</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PV_Watts_Sold_Q1__c</fullName>
        <description>Changes Paer Case# 00249138
(https://na29.salesforce.com/5008000000QWG9y)
PV Watts Sold (Q1) --&gt; Renamed to --&gt; PV KW Sold (Q1)</description>
        <inlineHelpText>Value in KW</inlineHelpText>
        <label>PV KW Sold (Q1)</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PV_Watts_Sold_Q2__c</fullName>
        <description>Changes Paer Case# 00249138 
(https://na29.salesforce.com/5008000000QWG9y) 
PV Watts Sold (Q2) --&gt; Renamed to --&gt; PV KW Sold (Q2)</description>
        <inlineHelpText>Value in KW</inlineHelpText>
        <label>PV KW Sold (Q2)</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PV_Watts_Sold_Q3__c</fullName>
        <description>Changes Paer Case# 00249138 
(https://na29.salesforce.com/5008000000QWG9y) 
PV Watts Sold (Q3) --&gt; Renamed to --&gt; PV KW Sold (Q3)</description>
        <inlineHelpText>Value in KW</inlineHelpText>
        <label>PV KW Sold (Q3)</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PV_Watts_Sold_last_year__c</fullName>
        <label>PV Watts Sold (last year)</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PV_share_1__c</fullName>
        <description>PV % share #1</description>
        <inlineHelpText>PV % share #1</inlineHelpText>
        <label>PV % share #1</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PV_share_2__c</fullName>
        <description>PV % share #2</description>
        <inlineHelpText>PV % share #2</inlineHelpText>
        <label>PV % share #2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PV_share_3__c</fullName>
        <description>PV % share #3</description>
        <inlineHelpText>PV % share #3</inlineHelpText>
        <label>PV % share #3</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Partner_Application_Type__c</fullName>
        <label>Partner Application Type</label>
        <picklist>
            <picklistValues>
                <fullName>Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Residential</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Partner_Type__c</fullName>
        <label>Partner Type</label>
        <picklist>
            <picklistValues>
                <fullName>Partner-Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Authorized-Partner-Residential</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Premier-Partner-Residential</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Authorized-Partner-Combo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Premier-Partner-Combo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Elite-Partner-Combo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Elite-Partner-Residential</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Percentage_Commercial_Projects__c</fullName>
        <label>Percentage Commercial Projects (kW)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percentage_Ground_Projects__c</fullName>
        <label>Percentage Ground Projects (kW)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percentage_Residential_Projects__c</fullName>
        <label>Percentage Residential Projects (kW)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Product_Type_1__c</fullName>
        <label>Product Type 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Type_2__c</fullName>
        <label>Product Type 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Type_3__c</fullName>
        <label>Product Type 3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Professional_Engineer_Available_Score__c</fullName>
        <formula>IF( Professional_Engineer_Available__c , 4, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Professional Engineer Available? (Score)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Professional_Engineer_Available__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Professional Engineer Available?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Professional_uniforms_Details__c</fullName>
        <label>Professional uniforms Details</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Professional_uniforms_Score__c</fullName>
        <label>Professional uniforms Score</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_Manager_on_staff_Score__c</fullName>
        <formula>IF( Project_Manager_on_staff__c , 3, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Manager (on-staff) (Score)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_Manager_on_staff__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Project Manager (on-staff)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Projected_Next_FY_Score__c</fullName>
        <formula>IF ( Projected_Next_FY_YOY__c &gt;= 50, 3,
IF ( Projected_Next_FY_YOY__c &gt;= 30, 2,
IF ( Projected_Next_FY_YOY__c &gt; 20, 1, 0)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Projected Next FY (Score)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Projected_Next_FY_YOY__c</fullName>
        <formula>IF(Projected_Revenue_This_Year__c=0,0,
100*(( Projected_Revenue_Next_Year__c -  Projected_Revenue_This_Year__c ) / Projected_Revenue_This_Year__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Projected Next FY (% YOY)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Projected_Revenue_Next_Year__c</fullName>
        <inlineHelpText>How much the candidate&apos;s business plans to make next year</inlineHelpText>
        <label>Projected Revenue Next Year</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Projected_Revenue_Next_Year_in_kW__c</fullName>
        <description>Projected Capacity next year in kw</description>
        <inlineHelpText>Projected Capacity next year in kw</inlineHelpText>
        <label>Projected Capacity next year in kw</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Projected_Revenue_This_Year__c</fullName>
        <inlineHelpText>How much the candidate&apos;s business plans to make this year</inlineHelpText>
        <label>Projected Revenue This Year</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Projected_Revenue_This_Year_in_kW__c</fullName>
        <description>Projected Capacity this year in kw</description>
        <inlineHelpText>Projected Capacity this year in kw</inlineHelpText>
        <label>Projected Capacity this year in kw</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Projected_current_FY_Score__c</fullName>
        <formula>IF ( Projected_current_FY_YOY__c &gt;= 50, 3, 
IF ( Projected_current_FY_YOY__c &gt;= 30, 2, 
IF ( Projected_current_FY_YOY__c &gt; 20, 1, 0)))</formula>
        <label>Projected current FY (Score)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Projected_current_FY_YOY__c</fullName>
        <formula>IF(Annual_Revenue_1_year_ago__c=0, 0, 
100 * (( Projected_Revenue_This_Year__c  -  Annual_Revenue_1_year_ago__c ) / Annual_Revenue_1_year_ago__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Projected current FY (% YOY)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Projects_Completed_Last_Year_Score__c</fullName>
        <formula>IF ($RecordType.Name == &apos;NA Commercial Partner Application&apos;,
  (
    IF(ISPICKVAL(Projects_completed_last_year__c, &quot;Less than 10 projects&quot;), 5,
    IF(ISPICKVAL(Projects_completed_last_year__c, &quot;11 - 25 projects&quot;), 10,
    IF(ISPICKVAL(Projects_completed_last_year__c, &quot;25 - 49 projects&quot;), 15,
    IF(ISPICKVAL(Projects_completed_last_year__c, &quot;50+ projects&quot;), 20, 0))))
  ),
  (
    IF(ISPICKVAL(Projects_completed_last_year__c, &quot;&lt; 100 projects&quot;), 5,
    IF(ISPICKVAL(Projects_completed_last_year__c, &quot;101 - 249 projects&quot;), 10,
    IF(ISPICKVAL(Projects_completed_last_year__c, &quot;250 - 499 projects&quot;), 15,
    IF(ISPICKVAL(Projects_completed_last_year__c, &quot;500+ projects&quot;), 20, 0))))
  )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Projects Completed Last Year (Score)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Projects_completed_last_year__c</fullName>
        <inlineHelpText>How many projects/jobs that candidate&apos;s business completed last year</inlineHelpText>
        <label>Projects completed last year</label>
        <picklist>
            <picklistValues>
                <fullName>&lt;100 projects</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>101 - 249 projects</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>250 - 499 projects</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>500+ projects</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Less than 10 projects</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11 - 25 projects</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25 - 49 projects</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50+ projects</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Proposal_Package_Details__c</fullName>
        <label>Proposal Package Details</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proposal_Package_Score__c</fullName>
        <label>Proposal Package Score</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Provide_Workers_Compensation__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Does the candidate provide Worker&apos;s Compensation insurance for employees</inlineHelpText>
        <label>Provide Worker&apos;s Compensation?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Q0_SunPower_Sales_to_Partner_kW__c</fullName>
        <label>Q0 SunPower Sales to Partner (kW)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q0_Total_Partner_Sales_kW__c</fullName>
        <label>Q0 Total Partner Sales (kW)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q_minus_1_SunPower_Sales_to_Partner_kW__c</fullName>
        <label>Q-1 SunPower Sales to Partner (kW)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q_minus_1_Total_Partner_Sales_kW__c</fullName>
        <label>Q-1 Total Partner Sales (kW)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q_minus_2_SunPower_Sales_to_Partner_kW__c</fullName>
        <label>Q-2 SunPower Sales to Partner (kW)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q_minus_2_Total_Partner_Sales_kW__c</fullName>
        <label>Q-2 Total Partner Sales (kW)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q_minus_3_SunPower_Sales_to_Partner_kW__c</fullName>
        <label>Q-3 SunPower Sales to Partner (kW)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q_minus_3_Total_Partner_Sales_kW__c</fullName>
        <label>Q-3 Total Partner Sales (kW)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q_plus_1_SunPower_Sales_to_Partner_kW__c</fullName>
        <label>Q+1 SunPower Sales to Partner (kW)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q_plus_1_Total_Partner_Sales_kW__c</fullName>
        <label>Q+1 Total Partner Sales (kW)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q_plus_2_SunPower_Sales_to_Partner_kW__c</fullName>
        <label>Q+2 SunPower Sales to Partner (kW)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q_plus_2_Total_Partner_Sales_kW__c</fullName>
        <label>Q+2 Total Partner Sales (kW)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q_plus_3_SunPower_Sales_to_Partner_kW__c</fullName>
        <label>Q+3 SunPower Sales to Partner (kW)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q_plus_3_Total_Partner_Sales_kW__c</fullName>
        <label>Q+3 Total Partner Sales (kW)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Qualifies_for_100000_credit_limit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Qualifies for 100,000 credit limit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Qualifies_for_250000_credit_limit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Qualifies for 250,000 credit limit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Qualifies_for_50_000_credit_limit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Qualifies for 50,000 credit limit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Quality_Certification_Score__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Quality Certification Score</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Quality_Certification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Quality Certification?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RSM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>SunPower sales manager conducting the meeting</inlineHelpText>
        <label>RSM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Partner_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Racking_Distributor_1__c</fullName>
        <label>Racking Distributor #1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Racking_Distributor_2__c</fullName>
        <label>Racking Distributor #2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Racking_Distributor_3__c</fullName>
        <label>Racking Distributor #3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Racking_Product_1__c</fullName>
        <label>Racking Product #1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Racking_Product_2__c</fullName>
        <label>Racking Product #2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Racking_Product_3__c</fullName>
        <label>Racking Product #3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Applicant not interested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (Explain: Free form below)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Relevant_Insurance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Relevant Insurance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Relevant_contractors_licenses_held__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Relevant contractor’s licenses held</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reputation_Details__c</fullName>
        <label>Reputation Details</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reputation_Score__c</fullName>
        <label>Reputation Score</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Resellers_License__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reseller&apos;s License</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Residential_Customer_Base__c</fullName>
        <inlineHelpText>How many existing residential customers can the candidate potentially sell solar systems to</inlineHelpText>
        <label>Residential Customer Base</label>
        <picklist>
            <picklistValues>
                <fullName>1 - 10 customers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11 - 100 customers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>101 - 1000 customers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1000+ customers</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Residential_Focus__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>What percentage of their business is focused on residential opportunities (Residential Focus + Commercial Focus = 100%)</inlineHelpText>
        <label>Residential Focus</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Residential_PV_installed_to_date__c</fullName>
        <inlineHelpText>The number (kW) of projects that have been installed for residential customers to date</inlineHelpText>
        <label>Residential PV installed to date</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Residential_Systems_installed_to_date__c</fullName>
        <inlineHelpText>The number of projects that have been installed for residential customers to date</inlineHelpText>
        <label>Residential_Systems_installed_to_date</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Revenue_per_Sales_Person_Yr_Ago__c</fullName>
        <formula>IF(Field_Level_Sales_Employees__c + Manager_Sales_Employees__c=0,0,IF( Annual_Revenue_1_year_ago__c/( Field_Level_Sales_Employees__c + Manager_Sales_Employees__c ) &gt;=250000,3, 
IF(Annual_Revenue_1_year_ago__c/( Field_Level_Sales_Employees__c + Manager_Sales_Employees__c ) &gt;=100000,2, 
IF(Annual_Revenue_1_year_ago__c/( Field_Level_Sales_Employees__c + Manager_Sales_Employees__c ) &gt;50000,1,0))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Revenue per Sales Person Yr Ago</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Roofing_License__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Roofing License?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Employees_Score__c</fullName>
        <formula>IF ( Sales_Employees__c &gt;=17, 10,
IF ( Sales_Employees__c &gt;=11, 8,
IF ( Sales_Employees__c &gt;=7, 6,
IF ( Sales_Employees__c &gt;=4, 4,
IF ( Sales_Employees__c &gt;=1, 1, 0)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Employees (Score)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Employees__c</fullName>
        <formula>Manager_Sales_Employees__c +
 Field_Level_Sales_Employees__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Employees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_manager_Details__c</fullName>
        <label>Sales manager Details</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_manager_Score__c</fullName>
        <label>Sales manager Score</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_meetings_Details__c</fullName>
        <label>Sales meetings Details</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_meetings_Score__c</fullName>
        <label>Sales meetings Score</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_process_Details__c</fullName>
        <label>Sales process Details</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_process_Score__c</fullName>
        <label>Sales process Score</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_training_Details__c</fullName>
        <label>Sales training Details</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_training_Score__c</fullName>
        <label>Sales training Score</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Scorecard_Score__c</fullName>
        <formula>Reputation_Score__c + Signage_Score__c + Business_Plan_1_Score__c + Business_Plan_2_Score__c + VAR_business_model_Score__c + Sales_training_Score__c + Sales_meetings_Score__c +  Basics_sales_metrics_tracking_Score__c + Sophisticated_sales_collateral_Score__c + Professional_uniforms_Score__c + Organized_referral_program_Score__c + Branded_sales_vehicle_Score__c + Sophisticated_website_Score__c + 
+ IF ($RecordType.Name == &apos;EU Partner Application&apos; ,0, License_Score__c + License_or_qualification_Score__c + Litigation_Score__c + Engineering_Score__c +  Install_truck_Score__c + History_in_PV_Score__c +  Historic_growth_rate_Score__c +  Well_capitalized_Score__c +  Sales_manager_Score__c +CRM_Score__c + Marketing_Manager_Score__c)
 +   IF ($RecordType.Name == &apos;NA Commercial Partner Application&apos;, (Commercial_Employees_Score__c + Proposal_Package_Score__c + Commercial_Sales_process_Score__c), (Sales_process_Score__c))
+IF ($RecordType.Name == &apos;NA Partner Application&apos;, Employees_Score__c + Showroom_Score__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BGSM Scorecard Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Secured_Performance_Bond__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Secured Performance Bond?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ship_To_City__c</fullName>
        <description>Used for Partner Application Billing Address details.</description>
        <label>Ship To City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Country__c</fullName>
        <description>Used for Partner Application Billing Address details.</description>
        <label>Ship To Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Postal_Code__c</fullName>
        <description>Used for Partner Application Billing Address details.</description>
        <label>Ship To Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_State__c</fullName>
        <description>Used for Partner Application Billing Address details.</description>
        <label>Ship To State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Street__c</fullName>
        <description>Used for Partner Application Billing Address details.</description>
        <label>Ship To Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Showroom_Details__c</fullName>
        <label>Showroom Details</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Showroom_Score__c</fullName>
        <label>Showroom Score</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Showroom__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Showroom?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Signage_Details__c</fullName>
        <label>Signage Details</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signage_Score__c</fullName>
        <label>Signage Score</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Solar_License_Certification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Solar License/Certification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sophisticated_sales_collateral_Details__c</fullName>
        <label>Sophisticated sales collateral Details</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sophisticated_sales_collateral_Score__c</fullName>
        <label>Sophisticated sales collateral Score</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sophisticated_website_Details__c</fullName>
        <label>Sophisticated website Details</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sophisticated_website_Score__c</fullName>
        <label>Sophisticated website Score</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>Bill to State</label>
        <length>30</length>
        <type>Text</type>
    </fields>
</CustomObject>